# index.js
@@ -4,6 +4,7 @@ const app = express();
 const port = 3000;
 const clientsRoutes = require('./routes/clientsRoutes');
 const paymentsRoutes = require('./routes/paymentsRoutes');
+const reservationsRoutes = require('./routes/reservationsRoutes');
 const escape_gamesRoutes = require('./routes/escape_gamesRoutes');
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger.json');
@@ -13,6 +14,7 @@ app.use(express.json());
 app.use('/clients', clientsRoutes);
 app.use('/escape_games', escape_gamesRoutes);
 app.use('/payments', paymentsRoutes);
+app.use('/reservations', reservationsRoutes);
 
 app.get('/', (req, res) => {
   res.send('Bienvenue sur mon API');
